# albert_python_stubs

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  MANIFEST.in  pyproject.toml  readme.md
albert/: __init__.pyi
src/albert-stubs/: __init__.pyi
