[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'albert-stubs'
version = '0.21.0'
authors = [
  { name='Steven Xu', email='stevenxxiu@gmail.com' },
]
description = 'Stubs for Albert Launcher Python Plugins'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
]

[tool.setuptools.packages.find]
where = ['src']

[project.urls]
'Homepage' = 'https://github.com/stevenxxiu/albert_python_stubs'
'Bug Tracker' = 'https://github.com/stevenxxiu/albert_python_stubs/issues'

[tool.black]
target-version = ['py310']
line-length = 120
skip-string-normalization = true
quiet = true
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = 'black'
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ['any_case']
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
lines_after_imports = 2
atomic = true
combine_star = true
skip = []
